objects/FieldInfo__c.object
<CustomObject>
    <description>Holds information about fields to be used in the ObjectInfo and AnalysisInfo</description>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Record__c</fullName>
        <label>Last Modified Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <label>Parent Object</label>
        <referenceTo>ObjectInfo__c</referenceTo>
        <relationshipLabel>FieldInfo</relationshipLabel>
        <relationshipName>FieldInfo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Percent_Populated__c</fullName>
        <label>Percent Populated</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Populated_Number__c</fullName>
        <label>Populated Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FieldInfo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FieldInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FieldInfo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>